# LAB2_MAI-OOP-LABS-cpp-2025

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
Lab2_Var2/: CMakeLists.txt
Lab2_Var2/include/: Array.h  Hex.h
Lab2_Var2/src/: Array.cpp  Hex.cpp
Lab2_Var2/tests/: test_main.cpp
